I have fixed it (recommeded books section ,navbar alignment issue)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,7 @@ p {
   -o-transition: background-color 0.3s ease-in-out;
 }
 .navbar-nav {
-  background-color: white;
+  background-color: saddlebrown;
   list-style-type: none;
   margin: 0 2rem;
   padding: 0;
